# Chessboard-Movement-Detection

./: .gitignore  README.md  main.py
Python/: ahmetcorners.py  corners.py  main.py  newmain.py
Python OOP/: Checkers.py  GameMovementRecorder.py  GlobalFunctions.py  GlobalVariables.py  IndexDectector.py  MovementEnum.py  PlayerEnum.py  PreporcessingVariables.py  main.py
cpp/: CMakeLists.txt  GameMovementRecorder.hpp  IndexDetector.hpp  checkers.cpp  checkers.hpp  enums.hpp  functions.hpp  main.cpp  preprocessingVariables.hpp  variables.hpp
source/: updateVideoGroundTruth.txt
